@@ -1,4 +1,4 @@
-%%BeginResource: procset dpost_cutmarks 1.2 0
+%%BeginResource: procset dpost_cutmarks 1.3 0
 %
 % Copyright 2005 Gunnar Ritter, Freiburg i. Br., Germany. All rights reserved.
 % Use is subject to license terms.
@@ -23,8 +23,11 @@
 %
 % CDDL HEADER END
 %
-% Sccsid @(#)cutmarks.ps	1.2 (gritter) 12/18/05
+% Sccsid @(#)cutmarks.ps	1.3 (gritter) 12/18/05
 %
+
+/_cutmark_a 10 def
+/_cutmark_b 30 def
 
 /_cutmark_adj {scaling div} def
 /_cutmark_yadj {pagebbox 3 get exch sub} def
@@ -55,11 +58,9 @@
 		pop
 		% No need to save/restore the graphics state since
 		% this is called before color/font page setup anyway.
-		0 0 0 1 setcmykcolor
+		/_setcolor where {pop 0 0 0 1 setcmykcolor} if
 		linewidth _cutmark_adj setlinewidth
 		newpath
-		/_cutmark_a 10 def
-		/_cutmark_b 30 def
 		0 1 _cutmark_a 0 0 1 _cutmark_b 0 _cutmark
 		_cutmark_a 1 0 0 _cutmark_b 1 0 0 _cutmark
 		0 3 _cutmark_a 0 0 3 _cutmark_b 0 _cutmark
@@ -68,7 +69,16 @@
 		_cutmark_a neg 3 0 2 _cutmark_b neg 3 0 2 _cutmark
 		0 1 _cutmark_a neg 2 0 1 _cutmark_b neg 2 _cutmark
 		_cutmark_a 1 0 2 _cutmark_b 1 0 2 _cutmark
+		stroke
+	} if
+} def
+
+/_regmarks {
+	/_TrimBox where {
+		pop
+		newpath
 		1 1 1 1 setcmykcolor
+		linewidth _cutmark_adj setlinewidth
 		/_cutmark_d _cutmark_b _cutmark_a sub 2 div _cutmark_adj def
 		0 _cutmark_tbx _cutmark_d sub _cutmark_a _cutmark_adj sub
 			1 _cutmark_tby 3 _cutmark_tby 1 _cutmark_tby sub
